--- a/style.css
+++ b/style.css
@@ -1,36 +1,65 @@
 * {
     margin: 0;
     padding: 0;
-    /* text-align: center; */
-}
-
-body {
-    background-color: black;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 h1 {
-    background: #081b31;
+    background-color: #081b31;
     color: white;
     height: 5rem;
     line-height: 5rem;
 }
 
-.choices {
+.choice {
+    height: 165px;
     width: 165px;
-    height: 165px;    
 }
 
 img {
-    width: 150px;
     height: 150px;
+    width: 150px;
     object-fit: cover;
     border-radius: 50%;
+    cursor: pointer;
 }
-
 .choices {
     display: flex;
     justify-content: center;
-    align-items: center;
     gap: 3rem;
     margin-top: 5rem;
+}
+.choice:hover {
+    /* opacity: 50%; */
+    transform: scale(1.1);
+    transition: all 0.3s ease-in-out;
+}
+
+.score-board {
+    margin-top: 5rem;
+    font-size: 2rem;
+    display: flex;  
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
+}
+
+#user-score, #comp-score {
+    margin: 0 2rem;
+    font-size: 4rem;
+}
+
+.msg-container {
+    margin-top: 5rem;
+}
+
+#msg {
+    background: #081b31;
+    color: white;
+    font-size: 2rem;
+    margin-top: 5rem;
+    display: inline;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
 }
